# invert

./: .gitignore  Invert.hs  Map.hs  cabal.project  changelog.md  default.nix  flake.nix  hie.yaml  invert.cabal  readme.md
.github/workflows/: haskell.yml  test.hs  test.yml
Invert/: Bijection.hs  Domain.hs  Function.hs  Injection.hs  Surjection.hs  Tools.hs
benchmarks/: bench.hs
configurations/: ghc-8.10.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project  ghc-9.4.project
examples/: examples.hs
invert/: changelog.md  invert.cabal  readme.md
invert/benchmarks/: bench.hs
invert/examples/: billing-codes.hs
invert/src/: Invert.hs  Map.hs  Vector.hs
invert/src/Invert/: Reexport.hs
nix/: default.nix
src/: Invert.hs  Map.hs
src/Invert/: Reexport.hs
