cabal-version: 2.0
name: invert
version: 0
build-type: Simple

library
    default-language: Haskell2010
    ghc-options: -Wall
    exposed-modules: Invert
    other-modules: Map
    default-extensions:
        NoImplicitPrelude
      , NamedFieldPuns
      , ExistentialQuantification
    build-depends:
        base ^>= 4.14
      , containers ^>=0.6
      , hashable ^>= 1.3
      , unordered-containers ^>= 0.2
      , generic-deriving ^>= 1.14
